2008-02-13  Frederic Crozat  <fcrozat@mandriva.com>

	* versions: Fix incorrect version for perl-Gnome2 module.

2008-02-13  Frederic Crozat  <fcrozat@mandriva.com>

	* smoketesting/tarball-conversion.config:
	Fix location for swfdec-gnome, version for gtkmm and add
	gnome-sharp-destop.

	* smoketesting/sample-tarball.jhbuildrc:
	* versions:
	GNOME 2.21.91 release

2008-02-13  Sven Herzberg  <sven@imendio.com>

	* prepare-ChangeLog.pl: included behdad's changes

2008-02-13  Sven Herzberg  <sven@imendio.com>

	* tools/prepare-ChangeLog.pl: re-merged the multiple-changelog support

2008-02-02  Sven Herzberg  <sven@imendio.com>

	* tools/prepare-ChangeLog.pl: recognize git repositories even inside
	subfolders

2008-02-02  Sven Herzberg  <sven@imendio.com>

	* tools/prepare-ChangeLog.pl: fix execution warnings

2008-02-02  Sven Herzberg  <herzi@gnome-de.org>

	* prepare-ChangeLog.pl: after chatting with rob we realized that we
	should not diff against the index. The solution right now is this:
	Diff the index against the last revision; if this doesn't reveal
	changes, diff the tree against the last revision. This way
	"git add file && prepare..." will end up containing only the files
	already added to the index

2008-01-31  Olav Vitters  <olav@bkor.dhs.org>

	* smoketesting/convert-to-tarballs.py: Ensure gtksourceview-1.0 is
	written to the versions file as gtksourceview (no '-1.0').

2008-01-31  Olav Vitters  <olav@bkor.dhs.org>

	* smoketesting/tarball-conversion.config: Move libxml2 and libxslt to
	external dependency.

2008-01-30  Elijah Newren  <newren gmail com>

	* versions:
	Another update for GNOME 2.21.90.

	libxml2 and libxslt shouldn't be in versions anymore; they're now
	external deps.  swfdec-gnome-0.5 was pulling from freedesktop.org,
	and we need ftp.gnome.org tarballs for releases (so I had to
	update to late released tarball).  And there's no such thing as
	"gtksourceview-1.0".

2008-01-30  Elijah Newren  <newren gmail com>

	* versions: