@@ -186,7 +186,7 @@
     <package name="file-roller"             set="desktop"/>
     <package name="gcalctool"               set="desktop"/>
     <package name="gconf-editor"            set="desktop"/>
-    <package name="gdm"                     set="desktop"/>
+    <package name="gdm"                     set="desktop"   max_version="2.21"/>
     <package name="gedit"                   set="desktop"/>
     <package name="gnome-applets"           set="desktop"/>
     <package name="gnome-backgrounds"       set="desktop"/>
@@ -278,11 +278,7 @@
     <package name="libxml++"           subdir="c++"    set="bindings"/>
     <package name="libsigc++"          subdir="c++"    set="bindings"/>
     # Java
-    <package name="libgtk-java"        subdir="java"   set="bindings"/>
-    <package name="libgnome-java"      subdir="java"   set="bindings"/>
-    <package name="libgconf-java"      subdir="java"   set="bindings"/>
-    <package name="libglade-java"      subdir="java"   set="bindings"/>
-    <package name="glib-java"          subdir="java"   set="bindings"/>
+    <package name="java-gnome"         subdir="java"   set="bindings"/>
     # Perl
     <package name="Glib"               subdir="perl"   set="bindings"/>
     <package name="Gnome2"             subdir="perl"   set="bindings"/>
